# medical_fenlei

./: .gitignore  README.md  check.md  environment.gh200.yml  environment.yml  pyproject.toml
archives/: README.md
artifacts/: README.md
cache/: README.md
data/: README.md
docs/: CHECKMD_GAPS.md  CURRENT_DATA_TASK_MODEL_REPORT.json  CURRENT_DATA_TASK_MODEL_REPORT.md  EXPERIMENTS_DUAL_SUMMARY.md  SETUP.md  TASK.md  experiments_dual_summary.csv
logs/: README.md
metadata/: README.md
scripts/: analyze_matching.py  build_cache_dual.py  build_cache_ears.py  build_index.py  build_manifest_ears.py  build_text_prototypes.py  calibrate_threshold_binary.py  check_patient_leakage.py  clean_dual_outliers_by_pair.py  compress_cache_npz.py  eval_dual.py  eval_dual_retrieval.py  eval_ear2d.py  eval_hierarchical_ear2d.py  extract_embeddings_ear2d.py  extract_report_triplets.py  fewshot_code4.py  gradcam_ear2d.py  inspect_dataset.py  make_splits.py  make_splits_dual.py  make_subsplits_dual_from_100pct.py  predict.py  predict_dual.py  predict_side.py  prepare_labels.py  qa_manifest_ears.py  report_data_tasks_models.py  retrieve_neighbors_ear2d.py  run_all_pcts_max.sh  run_dual_models_200ep_max.sh  run_ear2d_models_200ep_max.sh  run_experiments_dual.py  run_seeds_ear2d.py  summarize_experiments_dual.py  summarize_experiments_ear2d.py  train.py  train_dual.py  train_ear2d.py  train_ear2d_multiclass.py  (+1 more)
src/medical_fenlei/: cli_defaults.py  constants.py  (+8 more)
src/medical_fenlei.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: extract_all.sh  gh200_enable_system_torch.sh
(+15 files in other folders)
